Fixed some wrong margins and position of header bar.

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -100,6 +100,7 @@ body {
 .fixed-navbar #header {
   width: 100%;
   position: fixed;
+  top: 0px;
   z-index: 1000;
 
 }
